--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.3",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "flatpickr": "^4.6.13",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2",
     "react": "^18.3.1",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
+    "react-flatpickr": "^3.10.13",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
